<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="txt_saldo">Saldo disponível</string>
    <string name="saldo_limite">Saldo + Limite:</string>
    <string name="pagar">Pagar</string>
    <string name="ver_extrato">Ver extrato</string>
    <string name="transferir">Transferir</string>
    <string name="recarregar">Recarregar</string>
    <string name="txt_cartao">Cartão Final</string>
    <string name="txt_ola_victor">Olá, Victor</string>
</resources>